--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +18,6 @@
   },
   "homepage": "https://github.com/mcris-17/new-animal-api#readme",
   "dependencies": {
-    "json-server": "^0.16.3",
-    "serve": "^11.3.2"
+    "json-server": "^0.16.3"
   }
 }
